--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,7 @@
 		<log4j.version>1.2.17</log4j.version>
 
 	
-		<sonar.host.url>http://13.59.121.5:9000//</sonar.host.url>
+		<sonar.host.url>http://13.59.121.5:9000/</sonar.host.url>
 
 		<sonar.login>admin</sonar.login>
 		<sonar.password>admin</sonar.password>
